chore(assets): add news icons

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,49 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" type="image/x-icon" href="../assets/favicon.ico">
-    <title>Naver</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" type="image/x-icon" href="../assets/favicon.ico" />
+    <title>NAVER</title>
 </head>
 
 <body>
-
+    <h1>
+        <a href="https://www.naver.com">Naver</a>
+    </h1>
+    <h2>검색창</h2>
+    <fieldset>
+        <legend>검색</legend>
+        <input type="text" />
+        <buton>검색</buton>
+    </fieldset>
+    <ul>
+        <li>메일</li>
+        <li>카페</li>
+        <li>블로그</li>
+        <li>지식인</li>
+        <li>쇼핑</li>
+        <li>네이버페이</li>
+        <li>네이버TV</li>
+    </ul>
+    <h2>실시간 검색어</h2>
+    <h3>연합뉴스</h3>
+    <ol>
+        <li>文대통령, 아베에 친서보낼듯…이총리 "비공개 대화중"</li>
+        <li>이해찬 "국회의원 배려할 이유없어…모두 공수처 대상에 포함"</li>
+        <li></li>
+        <li></li>
+    </ol>
+    <h3>언론사 목록</h3>
+    <ul>
+        <li><img src="../assets/과학동아.png" alt="과학동아" /></li>
+        <li><img src="../assets/매일경제.png" alt="매일경제" /></li>
+        <li><img src="../assets/파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+        <li><img src="../assets/한국경제TV.png" alt="한국경제TV" /></li>
+        <li><img src="../assets/한국일보.png" alt="한국일보" /></li>
+    </ul>
+    <h3>로그인</h3>
 </body>
 
 </html>
