style: update header

--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,23 @@
 <body>
     <header>
         <div class="header">
-            <div>네이버를 시작페이지로</div>
+            <div class="header__topnav">
+                <span>네이버를 시작페이지로</span>
+                <span>쥬니어네이버</span>
+                <span>해피빈</span>
+            </div>
             <div class="header__search">
-                <h1>
-                    <a href="https://www.naver.com">Naver</a>
-                </h1>
-                <h2>검색창</h2>
+                <a href="https://www.naver.com">
+                    <h1 class="header__search--title">Naver</h1>
+                </a>
+                <h2 class="blind">검색창</h2>
                 <fieldset>
-                    <legend>검색</legend>
-                    <input type="text" />
-                    <buton>검색</buton>
+                    <legend class="blind">검색</legend>
+                    <input class="header__search--input" type="text" />
+                    <button class="header__search--btn">
+                        <span class="blind">검색</span>
+                        <span class="header__search--image"></span>
+                    </button>
                 </fieldset>
             </div>
         </div>
@@ -49,6 +56,21 @@
         </ol>
         <h3>언론사 목록</h3>
         <ul>
+            <li><img src="assets/과학동아.png" alt="과학동아" /></li>
+            <li><img src="assets/매일경제.png" alt="매일경제" /></li>
+            <li><img src="assets/파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+            <li><img src="assets/한국경제TV.png" alt="한국경제TV" /></li>
+            <li><img src="assets/한국일보.png" alt="한국일보" /></li>
+            <li><img src="assets/과학동아.png" alt="과학동아" /></li>
+            <li><img src="assets/매일경제.png" alt="매일경제" /></li>
+            <li><img src="assets/파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+            <li><img src="assets/한국경제TV.png" alt="한국경제TV" /></li>
+            <li><img src="assets/한국일보.png" alt="한국일보" /></li>
+            <li><img src="assets/과학동아.png" alt="과학동아" /></li>
+            <li><img src="assets/매일경제.png" alt="매일경제" /></li>
+            <li><img src="assets/파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+            <li><img src="assets/한국경제TV.png" alt="한국경제TV" /></li>
+            <li><img src="assets/한국일보.png" alt="한국일보" /></li>
             <li><img src="assets/과학동아.png" alt="과학동아" /></li>
             <li><img src="assets/매일경제.png" alt="매일경제" /></li>
             <li><img src="assets/파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
