style: add mixins and nav layout

--- a/src/index.html
+++ b/src/index.html
@@ -35,15 +35,17 @@
         </div>
     </header>
     <nav>
-        <ul>
-            <li>메일</li>
-            <li>카페</li>
-            <li>블로그</li>
-            <li>지식인</li>
-            <li>쇼핑</li>
-            <li>네이버페이</li>
-            <li>네이버TV</li>
-        </ul>
+        <div class="nav">
+            <ul>
+                <li><a href=""><span></span><span class="blind">메일</span></a></li>
+                <li><a href=""><span></span><span class="blind">카페</span></a></li>
+                <li><a href=""><span></span><span class="blind">블로그</span></a></li>
+                <li><a href=""><span></span><span class="blind">지식인</span></a></li>
+                <li><a href=""><span></span><span class="blind">쇼핑</span></a></li>
+                <li><a href=""><span></span><span class="blind">네이버페이</span></a></li>
+                <li><a href=""><span></span><span class="blind">네이버TV</span></a></li>
+            </ul>
+        </div>
     </nav>
     <main>
         <h2>실시간 검색어</h2>
