style(header): add mixin for image sprites

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
                     <legend class="blind">검색</legend>
                     <input class="header__search--input" type="text" />
                     <button class="header__search--btn">
+                        <span class="header__search--icon"></span>
                         <span class="blind">검색</span>
-                        <span class="header__search--image"></span>
                     </button>
                 </fieldset>
             </div>
