--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <div class="header">
-            <div class="header__topnav">
-                <span>네이버를 시작페이지로</span>
+            <div class="header__top">
+                <span>네이버를 시작페이지로 ></span>
                 <span>쥬니어네이버</span>
                 <span>해피빈</span>
             </div>
@@ -26,6 +26,8 @@
                 <fieldset>
                     <legend class="blind">검색</legend>
                     <input class="header__search--input" type="text" />
+                    <span class="header__search--keyboard"></span>
+                    <span class="header__search--history"></span>
                     <button class="header__search--btn">
                         <span class="header__search--icon"></span>
                         <span class="blind">검색</span>
@@ -34,8 +36,13 @@
             </div>
         </div>
     </header>
-    <nav>
-        <div class="nav">
+    <nav class="nav">
+        <div class="nav__container">
+            <div class="nav__ranking">
+                <h2 class="blind">실시간 검색어</h2>
+                <span class="nav__ranking--number">1</span>
+                <span class="nav__ranking--title">Daum</span>
+            </div>
             <ul>
                 <li><a href=""><span></span><span class="blind">메일</span></a></li>
                 <li><a href=""><span></span><span class="blind">카페</span></a></li>
@@ -44,45 +51,77 @@
                 <li><a href=""><span></span><span class="blind">쇼핑</span></a></li>
                 <li><a href=""><span></span><span class="blind">네이버페이</span></a></li>
                 <li><a href=""><span></span><span class="blind">네이버TV</span></a></li>
+                <li><a href=""><span></span><span class="blind">사전</span></a></li>
+                <li><a href=""><span></span><span class="blind">뉴스</span></a></li>
+                <li><a href=""><span></span><span class="blind">증권</span></a></li>
+                <li><a href=""><span></span><span class="blind">부동산</span></a></li>
+                <li><a href=""><span></span><span class="blind">지도</span></a></li>
+                <li><a href=""><span></span><span class="blind">영화</span></a></li>
+                <li><a href=""><span></span><span class="blind">뮤직</span></a></li>
+                <li><a href=""><span></span><span class="blind">책</span></a></li>
+                <li><a href=""><span></span><span class="blind">웹툰</span></a></li>
             </ul>
+            <div class="v-divider"></div>
         </div>
     </nav>
-    <main>
-        <h2>실시간 검색어</h2>
-        <h3>연합뉴스</h3>
-        <ol>
-            <li>文대통령, 아베에 친서보낼듯…이총리 "비공개 대화중"</li>
-            <li>이해찬 "국회의원 배려할 이유없어…모두 공수처 대상에 포함"</li>
-            <li>전해철, 법무장관說에 "해야 할 역할이라면 어떻게 피하겠나"</li>
-            <li>뒤늦은 휴전중재로 '승리' 외친 美…정계·언론은 "터키의 승리"</li>
-        </ol>
-        <h3>언론사 목록</h3>
-        <ul>
-            <li><img src="assets/과학동아.png" alt="과학동아" /></li>
-            <li><img src="assets/매일경제.png" alt="매일경제" /></li>
-            <li><img src="assets/파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
-            <li><img src="assets/한국경제TV.png" alt="한국경제TV" /></li>
-            <li><img src="assets/한국일보.png" alt="한국일보" /></li>
-            <li><img src="assets/과학동아.png" alt="과학동아" /></li>
-            <li><img src="assets/매일경제.png" alt="매일경제" /></li>
-            <li><img src="assets/파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
-            <li><img src="assets/한국경제TV.png" alt="한국경제TV" /></li>
-            <li><img src="assets/한국일보.png" alt="한국일보" /></li>
-            <li><img src="assets/과학동아.png" alt="과학동아" /></li>
-            <li><img src="assets/매일경제.png" alt="매일경제" /></li>
-            <li><img src="assets/파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
-            <li><img src="assets/한국경제TV.png" alt="한국경제TV" /></li>
-            <li><img src="assets/한국일보.png" alt="한국일보" /></li>
-            <li><img src="assets/과학동아.png" alt="과학동아" /></li>
-            <li><img src="assets/매일경제.png" alt="매일경제" /></li>
-            <li><img src="assets/파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
-            <li><img src="assets/한국경제TV.png" alt="한국경제TV" /></li>
-            <li><img src="assets/한국일보.png" alt="한국일보" /></li>
-        </ul>
-        <h3>로그인</h3>
-        <h3>뉴스</h3>
-        <h3>법률</h3>
-        <h3>쇼핑</h3>
+    <main class="main">
+        <div class="main__container">
+            <div class="main__first-block">
+                <div class="main__first-block--ad"></div>
+                <div class="main__first-block--login"></div>
+            </div>
+            <div class="main__second-block">
+                <div class="inline-block-box">
+                    <div class="main__second-block--news">
+                        <h3>연합뉴스</h3>
+                        <ol>
+                            <li>뒤늦은 휴전중재로 '승리' 외친 美…정계·언론은 "터키의 승리"</li>
+                        </ol>
+                    </div>
+                    <div class="main__second-block--newsstand">
+                        <h3>뉴스스탠드</h3>
+                        <ul>
+                            <li><img src="assets/과학동아.png" alt="과학동아" /></li>
+                            <li><img src="assets/매일경제.png" alt="매일경제" /></li>
+                            <li><img src="assets/파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+                            <li><img src="assets/한국경제TV.png" alt="한국경제TV" /></li>
+                            <li><img src="assets/한국일보.png" alt="한국일보" /></li>
+                            <li><img src="assets/과학동아.png" alt="과학동아" /></li>
+                            <li><img src="assets/매일경제.png" alt="매일경제" /></li>
+                            <li><img src="assets/파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+                            <li><img src="assets/한국경제TV.png" alt="한국경제TV" /></li>
+                            <li><img src="assets/한국일보.png" alt="한국일보" /></li>
+                            <li><img src="assets/과학동아.png" alt="과학동아" /></li>
+                            <li><img src="assets/매일경제.png" alt="매일경제" /></li>
+                            <li><img src="assets/파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+                            <li><img src="assets/한국경제TV.png" alt="한국경제TV" /></li>
+                            <li><img src="assets/한국일보.png" alt="한국일보" /></li>
+                            <li><img src="assets/과학동아.png" alt="과학동아" /></li>
+                            <li><img src="assets/매일경제.png" alt="매일경제" /></li>
+                            <li><img src="assets/파이낸셜뉴스.png" alt="파이낸셜뉴스" /></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="inline-block-box">
+                    <div class="main__second-block--weather"></div>
+                    <div class="main__second-block--ad"></div>
+                </div>
+            </div>
+            <div class="main__third-block">
+                <div class="main__third-block--category">
+                    <h3>주제별 보기</h3>
+                </div>
+                <div class="main__third-block--shopping">
+                    <h3>쇼핑</h3>
+                </div>
+            </div>
+            <div class="main__fourth-block">
+                <div class="main__fourth-block--event">
+                    <h3>이벤트</h3>
+                </div>
+                <div class="main__fourth-block--ad"></div>
+            </div>
+        </div>
     </main>
     <footer>
         <div>공지사항</div>
