style(nav): update nav__detail for ranking details

--- a/src/index.html
+++ b/src/index.html
@@ -40,10 +40,46 @@
         <div class="nav__container">
             <div class="nav__ranking">
                 <h2 class="blind">실시간 검색어</h2>
-                <span class="nav__ranking--number">1</span>
-                <span class="nav__ranking--title">Daum</span>
+                <div>
+                    <span class="nav__ranking--number">1</span>
+                    <span class="nav__ranking--title">Daum</span>
+                </div>
+                <div class="nav__detail">
+                    <div class="nav__detail--top">
+                        <h3>급상승 검색어</h3>
+                        <div>
+                            <span>전체연령</span>
+                            <span>·</span>
+                            <span>현재</span>
+                        </div>
+                    </div>
+                    <div class="nav__detail--nav">
+                        <div>
+                            <h4>1~10위</h4>
+                        </div>
+                        <div>
+                            <h4>11~20위</h4>
+                        </div>
+                    </div>
+                    <ul class="nav__detail--list">
+                        <li><span>1</span><span>Daum</span></li>
+                        <li><span>2</span><span>Daum</span></li>
+                        <li><span>3</span><span>Daum</span></li>
+                        <li><span>4</span><span>Daum</span></li>
+                        <li><span>5</span><span>Daum</span></li>
+                        <li><span>6</span><span>Daum</span></li>
+                        <li><span>7</span><span>Daum</span></li>
+                        <li><span>8</span><span>Daum</span></li>
+                        <li><span>9</span><span>Daum</span></li>
+                        <li><span>10</span><span>Daum</span></li>
+                    </ul>
+                    <div class="nav__detail--footer">
+                        <div>2019.10.21. 10:53 기준</div>
+                        <div>급상승 트랙킹</div>
+                    </div>
+                </div>
             </div>
-            <ul>
+            <ul class="nav__menu">
                 <li><a href=""><span></span><span class="blind">메일</span></a></li>
                 <li><a href=""><span></span><span class="blind">카페</span></a></li>
                 <li><a href=""><span></span><span class="blind">블로그</span></a></li>
@@ -62,6 +98,9 @@
                 <li><a href=""><span></span><span class="blind">웹툰</span></a></li>
             </ul>
             <div class="v-divider"></div>
+            <ul class="nav__more">
+                <li class="nav__more--icon"><a href=""><span></span><span class="blind">더보기</span></a></li>
+            </ul>
         </div>
     </nav>
     <main class="main">
@@ -112,7 +151,7 @@
                     <h3>주제별 보기</h3>
                 </div>
                 <div class="main__third-block--shopping">
-                    <h3>쇼핑</h3>
+                    <iframe src="https://castbox.shopping.naver.com/shopbox/main.nhn?" frameborder="0" scrolling="no"></iframe>
                 </div>
             </div>
             <div class="main__fourth-block">
