--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
     </nav>
     <main class="main">
         <div class="main__container">
-            <div class="main__first-block">
+            <section class="main__first-block">
                 <div class="main__first-block--ad"></div>
                 <div class="main__first-block--login">
                     <h3 class="blind">로그인</h3>
@@ -122,8 +122,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="main__second-block">
+            </section>
+            <section class="main__second-block">
                 <div class="inline-block-box">
                     <div class="main__second-block--news">
                         <h3>연합뉴스</h3>
@@ -161,8 +161,8 @@
                     <div class="main__second-block--weather"></div>
                     <div class="main__second-block--ad"></div>
                 </div>
-            </div>
-            <div class="main__third-block">
+            </section>
+            <section class="main__third-block">
                 <div class="main__third-block--category">
                     <div class="subject-list">
                         <button class="subject-list__btn--all"><span></span><span class="blind">전체 주제 열기</span></button>
@@ -194,19 +194,19 @@
                 <div class="main__third-block--shopping">
                     <iframe src="https://castbox.shopping.naver.com/shopbox/main.nhn?" frameborder="0" scrolling="no"></iframe>
                 </div>
-            </div>
-            <div class="main__fourth-block">
+            </section>
+            <section class="main__fourth-block">
                 <div class="main__fourth-block--event">
                     <h3 class="blind">이벤트</h3>
                 </div>
                 <div class="main__fourth-block--ad"></div>
-            </div>
+            </section>
         </div>
     </main>
-    <footer>
-        <div>공지사항</div>
-        <div>Creators</div>
-        <div>회사소개</div>
+    <footer class="footer">
+        <div class="footer__container">
+
+        </div>
     </footer>
 </body>
 
